Trying image upload

--- a/locales/en.json
+++ b/locales/en.json
@@ -14,5 +14,6 @@
 	"Separated by commas": "Separated by commas",
 	"Language": "Language",
 	" Article": " Article",
-	" Separated by commas": " Separated by commas"
+	" Separated by commas": " Separated by commas",
+	"Photo": "Photo"
 }
