--- a/locales/es.json
+++ b/locales/es.json
@@ -13,6 +13,7 @@
 	"Publish": "Publicar",
 	"Separated by commas": "Separadas por comas",
 	"Language": "Idioma",
-	" Article": " Article",
-	" Separated by commas": " Separated by commas"
+	" Article": " Artículo",
+	" Separated by commas": " Separadas por comas",
+	"Photo": "Foto"
 }
